# xp-vox-engine

./: Cargo.toml  Makefile  TODO
benches/: benchmark_greedy_meshing.rs
res/vox-models/: first-tree.vox
src/: lib.rs  main.rs
src/asset/: asset_loader.rs  mod.rs
src/chunker/: greedy_meshing.rs  mod.rs
src/entity/: entity.rs
src/gltf/: loader.rs
src/mesh/: mesh_data.rs
src/physics/: mod.rs  physics.rs
src/renderer/: light_bindgroup.rs  light_pipeline.rs  mesh.rs  mod.rs  pipeline.rs  renderer.rs  vertex_buffer.rs
src/renderer/shaders/: light_shader.frag.spv  light_shader.vert.spv  light_shader.wgsl  shader.frag.spv  shader.vert.spv  shader.wgsl
src/world/: chunk.rs  chunker.rs  chunks.rs  constants.rs  greedy_meshing.rs  loader.rs  mod.rs  sliding_vec3d.rs  vox.rs  vox3d.rs  voxheightmap.rs  world.rs  world2.rs  world_window.rs
