[package]
name = "xp-vox-engine"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[dependencies]
noise = "0.7"
winit = "0.24"
wgpu = "0.9"
glsl-to-spirv = "0.1.7"
bytemuck = "1.5.0"
glam = "0.12"
futures = "0.3"
gltf = "0.15.2"
base64 = "0.13.0"
image = "0.23"
rapier2d = "0.6"
rapier3d = "0.7"
dot_vox = "4.1.0"

[[bench]]
name = "benchmark_greedy_meshing"
harness = false